[fix] made changes to openapi config
