# src/routes/v1/index.ts
@@ -10,28 +10,14 @@ import * as swaggerDoc from "./openapi.json"; // mark resolveJsonModule as true 
 
 const v1Router = express.Router();
 
-// Middleware to introduce random slowdowns and errors
-const randomizeResponse = (req: Request, res: Response, next: NextFunction) => {
-  const randomDelay = Math.random() * 1000; // Random delay up to 1 second
-  const randomError = Math.random() < 0.1; // 10% chance of error
-
-  setTimeout(() => {
-    if (randomError) {
-      res.status(500).send("Random error occurred");
-    } else {
-      next();
-    }
-  }, randomDelay);
-};
-
 //global middleware
 v1Router.use(errorHandler);
 
 //routes
 v1Router.use("/docs", swaggerUi.serve, swaggerUi.setup(swaggerDoc));
-v1Router.use("/shards", authMiddleware, randomizeResponse, shardRouter);
-v1Router.use("/rooms", authMiddleware, randomizeResponse, roomRouter);
-v1Router.use("/users", randomizeResponse, userRouter);
-v1Router.use("/comments", authMiddleware, randomizeResponse, commentRouter);
+v1Router.use("/shards", authMiddleware, shardRouter);
+v1Router.use("/rooms", authMiddleware, roomRouter);
+v1Router.use("/users", userRouter);
+v1Router.use("/comments", authMiddleware, commentRouter);
 
 export default v1Router;
